==> fsouza/qmk_firmware/zsa_firmware/lib/chibios-contrib/os/hal/ports/WB32/LLD/USBv1/hal_usb_lld.c <==
#include <string.h>
#include "hal.h"

void usb_lld_start(USBDriver *usbp) {

  if (usbp->state == USB_STOP) {

    usbp->epc[0] = &ep0config;

    wb32_usb_init(usbp);

    WB32_USB->INTRUSBE = 0x00;
    WB32_USB->INTRINE = 0x01;
    WB32_USB->INTROUTE = 0x00;

    nvicEnableVector(WB32_USB1_NUMBER, WB32_USB_USB1_IRQ_PRIORITY);
  }
}

void usb_lld_stop(USBDriver *usbp) {

  /* If in ready state then disables the USB clock.*/
  if (usbp->state != USB_STOP) {

    nvicDisableVector(WB32_USB1_NUMBER);
    WB32_USB->INTRUSBE = 0x00;
    WB32_USB->INTRINE = 0x00;
    WB32_USB->INTROUTE = 0x00;
    wb32_usb_deinit(usbp);
  }
}

void usb_lld_reset(USBDriver *usbp) {

  /* Post reset initialization.*/
  /* Disable  in all endpoint interrupt.*/
  WB32_USB->INTRINE = 0x00;
  /* Disable out all endpoint interrupt.*/
  WB32_USB->INTROUTE = 0x00;

  /* The SOF interrupt is only enabled if a callback is defined for
     this service because it is an high rate source.*/
  if (usbp->config->sof_cb != NULL)
    WB32_USB->INTRUSBE |= USB_INTRUSBE_SOFIE;

  /* EP0 initialization.*/
  usbp->epc[0] = &ep0config;
  usb_lld_init_endpoint(usbp, 0);

  /* Enable USB suspend interrupt.*/
  WB32_USB->POWER = USB_POWER_SUSEN;
  WB32_USB->INTRUSBE |= USB_INTRUSBE_SUSIE;
}

void usb_lld_set_address(USBDriver *usbp) {

  WB32_USB->FADDR = (uint8_t)(usbp->address);
}

void usb_lld_init_endpoint(USBDriver *usbp, usbep_t ep) {

  const USBEndpointConfig *epcp = usbp->epc[ep];

  WB32_USB->INDEX = (ep & 0x0F);

  /* Setting the endpoint type. Note that isochronous endpoints cannot
     be bidirectional because it uses double buffering and both transmit and
     receive descriptor fields are used for either direction.*/
  if (ep & 0x0F) {
    switch (epcp->ep_mode & USB_EP_MODE_TYPE) {
      case USB_EP_MODE_TYPE_ISOC: {
        /* endpoint handling.*/
        if ((epcp->in_state != NULL) || (epcp->out_state != NULL)) {
        WB32_USB->INCSR2 = (USB_INCSR2_AUTOSET |
                            USB_INCSR2_ISO |
                            USB_INCSR2_DIRSEL);
          WB32_USB->INMAXP = (epcp->in_maxsize >> 3);
          WB32_USB->INCSR1 = USB_INCSR1_CLRDATATOG;
          WB32_USB->INCSR1 = USB_INCSR1_FLUSHFIFO;
          WB32_USB->INCSR1 = USB_INCSR1_FLUSHFIFO;
          WB32_USB->INTRINE |= (0x01 << (ep & 0x0F));

          WB32_USB->OUTCSR2 = (USB_OUTCSR2_AUTOCLR | USB_OUTCSR2_ISO);
          WB32_USB->OUTMAXP = (epcp->out_maxsize >> 3);
          WB32_USB->OUTCSR1 = USB_OUTCSR1_CLRDATATOG;
          WB32_USB->OUTCSR1 = USB_OUTCSR1_FLUSHFIFO;
          WB32_USB->OUTCSR1 = USB_OUTCSR1_FLUSHFIFO;
          WB32_USB->INTROUTE |= (0x01 << (ep & 0x0F));
        }
      } break;
      case USB_EP_MODE_TYPE_BULK: {
        /* IN endpoint handling.*/
        if (epcp->in_state != NULL) {
          WB32_USB->INCSR2 = 0x00;
          WB32_USB->INMAXP = (epcp->in_maxsize >> 3);
          WB32_USB->INCSR1 = USB_INCSR1_CLRDATATOG;
          WB32_USB->INCSR1 = USB_INCSR1_FLUSHFIFO;
          WB32_USB->INCSR1 = USB_INCSR1_FLUSHFIFO;
          WB32_USB->INTRINE |= (0x01 << (ep & 0x0F));
        }
        /* OUT endpoint handling.*/
        if (epcp->out_state != NULL) {
          WB32_USB->OUTCSR2 = 0x00;
          WB32_USB->OUTMAXP = (epcp->out_maxsize >> 3);
          WB32_USB->OUTCSR1 = USB_OUTCSR1_CLRDATATOG;
          WB32_USB->OUTCSR1 = USB_OUTCSR1_FLUSHFIFO;
          WB32_USB->OUTCSR1 = USB_OUTCSR1_FLUSHFIFO;
          WB32_USB->INTROUTE |= (0x01 << (ep & 0x0F));
        }
      } break;
      case USB_EP_MODE_TYPE_INTR: {
        /* IN endpoint handling.*/
        if (epcp->in_state != NULL) {
          WB32_USB->INCSR2 = 0x00;
          WB32_USB->INMAXP = (epcp->in_maxsize >> 3);
          WB32_USB->INCSR1 = USB_INCSR1_CLRDATATOG;
          WB32_USB->INCSR1 = USB_INCSR1_FLUSHFIFO;
          WB32_USB->INCSR1 = USB_INCSR1_FLUSHFIFO;
          WB32_USB->INTRINE |= (0x01 << (ep & 0x0F));
        }
        /* OUT endpoint handling.*/
        if (epcp->out_state != NULL) {
          WB32_USB->OUTCSR2 = 0x00;
          WB32_USB->OUTMAXP = (epcp->out_maxsize >> 3);
          WB32_USB->OUTCSR1 = USB_OUTCSR1_CLRDATATOG;
          WB32_USB->OUTCSR1 = USB_OUTCSR1_FLUSHFIFO;
          WB32_USB->OUTCSR1 = USB_OUTCSR1_FLUSHFIFO;
          WB32_USB->INTROUTE |= (0x01 << (ep & 0x0F));
        }
      } break;
      default: {

      } break;
    }
  }
  else {
    if ((epcp->ep_mode & USB_EP_MODE_TYPE) == USB_EP_MODE_TYPE_CTRL) {
      /* CTRL Mode.*/
      /* Enable in endpoint 0 interrupt.*/
      WB32_USB->INTRINE |= USB_INTRINE_EP0E;
    }
  }
}

void usb_lld_disable_endpoints(USBDriver *usbp) {
  uint8_t i;
  WB32_USB->INTRINE &= 0x01;
  WB32_USB->INTROUTE = 0x00;

  /* Disabling all endpoints.*/
  for (i = 1; i <= (USB_ENDOPOINTS_NUMBER & 0x0F); i++) {
    WB32_USB->INDEX = i;
    WB32_USB->INCSR2 = 0x00;
    WB32_USB->INCSR1 = USB_INCSR1_CLRDATATOG;
    WB32_USB->INCSR1 = USB_INCSR1_FLUSHFIFO;
    WB32_USB->INCSR1 = USB_INCSR1_FLUSHFIFO;

    WB32_USB->OUTCSR2 = 0x00;
    WB32_USB->OUTCSR1 = USB_OUTCSR1_CLRDATATOG;
    WB32_USB->OUTCSR1 = USB_OUTCSR1_FLUSHFIFO;
    WB32_USB->OUTCSR1 = USB_OUTCSR1_FLUSHFIFO;
  }
}

usbepstatus_t usb_lld_get_status_out(USBDriver *usbp, usbep_t ep) {

  (void)usbp;

  WB32_USB->INDEX = (ep & 0x0F);

  if (ep == 0) {
    if (WB32_USB->CSR0 & USB_CSR0_SENTSTALL) {
      return EP_STATUS_STALLED;
    }
    else if (WB32_USB->INTRINE & USB_INTRINE_EP0E) {
      return EP_STATUS_ACTIVE;
    }
    else {
      return EP_STATUS_DISABLED;
    }
  }
  else {
    if (WB32_USB->OUTCSR1 & USB_OUTCSR1_SENDSTALL) {
      return EP_STATUS_STALLED;
    }
    else if (WB32_USB->INTROUTE & (1 << (ep & 0x0F))) {
      return EP_STATUS_ACTIVE;
    }
    else {
      return EP_STATUS_DISABLED;
    }
  }
}

usbepstatus_t usb_lld_get_status_in(USBDriver *usbp, usbep_t ep) {

  (void)usbp;

  WB32_USB->INDEX = (ep & 0x0F);

  if (ep == 0) {
    if (WB32_USB->CSR0 & USB_CSR0_SENTSTALL) {
      return EP_STATUS_STALLED;
    }
    else if (WB32_USB->INTRINE & USB_INTRINE_EP0E) {
      return EP_STATUS_ACTIVE;
    }
    else {
      return EP_STATUS_DISABLED;
    }
  }
  else {
    if (WB32_USB->INCSR1 & USB_INCSR1_SENDSTALL) {
      return EP_STATUS_STALLED;
    }
    else if (WB32_USB->INTRINE & (1 << (ep & 0x0F))) {
      return EP_STATUS_ACTIVE;
    }
    else {
      return EP_STATUS_DISABLED;
    }
  }
}

void usb_lld_read_setup(USBDriver *usbp, usbep_t ep, uint8_t *buf) {
  uint32_t ep_fifo_addr;
  uint8_t n;

  (void)usbp;
  ep_fifo_addr = (uint32_t)&WB32_USB->FIFO[ep & 0x0F];
  for (n = 0; n < 8; n++) {
    *buf = *((volatile uint8_t *)ep_fifo_addr);
    buf++;
  }
}

void usb_lld_start_in(USBDriver *usbp, usbep_t ep) {
  size_t n;
  uint8_t ep_num = (ep & 0x0F);
  uint8_t ControlReg;
  USBInEndpointState *isp = usbp->epc[ep]->in_state;

  if (ep_num == 0) {
    WB32_USB->INDEX = 0;
    WB32_USB->CSR0 = USB_CSR0_SVDOUTPKTRDY;
  }

  /* Transfer initialization.*/
  n = isp->txsize;
  if (n > (size_t)usbp->epc[ep]->in_maxsize)
    n = (size_t)usbp->epc[ep]->in_maxsize;

  isp->txlast = n;
  usb_packet_write_from_buffer(ep, isp->txbuf, n);

  if (ep_num != 0) {
    WB32_USB->INDEX = ep_num;
    WB32_USB->INCSR1 = USB_INCSR1_INPKTRDY;
  }
  else {
    WB32_USB->INDEX = 0;
    ControlReg = WB32_USB->CSR0;
    ControlReg = USB_CSR0_INPKTRDY;
    if (n < (size_t)usbp->epc[0]->in_maxsize) {
      ControlReg |= USB_CSR0_DATAEND;
    }
    WB32_USB->CSR0 = ControlReg;
  }
}

void usb_lld_stall_out(USBDriver *usbp, usbep_t ep) {

  uint8_t ep_num;

  (void)usbp;

  ep_num = ep & 0x0F;
  WB32_USB->INDEX = ep_num;
  if (ep_num != 0) {
    /* OUT Endpoint */
    WB32_USB->OUTCSR1 = USB_OUTCSR1_SENDSTALL;
  }
  else {
    WB32_USB->CSR0 = (USB_CSR0_SVDOUTPKTRDY | USB_CSR0_SENDSTALL);
  }
}

void usb_lld_stall_in(USBDriver *usbp, usbep_t ep) {

  uint8_t ep_num;

  (void)usbp;

  ep_num = ep & 0x0F;
  WB32_USB->INDEX = ep_num;
  if (ep_num != 0) {
    /* IN Endpoint.*/
    WB32_USB->INCSR1 = USB_INCSR1_SENDSTALL;
  }
  else {
    WB32_USB->CSR0 = (USB_CSR0_SVDOUTPKTRDY | USB_CSR0_SENDSTALL);
  }
}

void usb_lld_clear_out(USBDriver *usbp, usbep_t ep) {

  uint8_t ep_num;

  (void)usbp;

  ep_num = ep & 0x0F;
  WB32_USB->INDEX = ep_num;
  if (ep_num != 0) {
    /* OUT Endpoint.*/
    WB32_USB->OUTCSR1 = USB_OUTCSR1_CLRDATATOG;
  }
  else {
    WB32_USB->CSR0 = 0x00;
  }
}

void usb_lld_clear_in(USBDriver *usbp, usbep_t ep) {

  uint8_t ep_num;

  (void)usbp;

  ep_num = ep & 0x0F;
  WB32_USB->INDEX = ep_num;
  if (ep_num != 0) {
    /* IN Endpoint.*/
    WB32_USB->INCSR1 = USB_INCSR1_CLRDATATOG;
  }
  else {
    WB32_USB->CSR0 = 0x00;
  }
}
